Fixed Nav Bar top gap
Removed default padding and margin

--- a/src/CSS/general.css
+++ b/src/CSS/general.css
@@ -1,3 +1,9 @@
+/* Resetting default styles */
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
 * {
   box-sizing: border-box;
 }
